--- a/GankIO/pages/specific/specific.wxml
+++ b/GankIO/pages/specific/specific.wxml
@@ -16,6 +16,6 @@
     </view>
   </view>
   <view class="videoFrame">
-    <video class="video" src="http://v.youku.com/v_show/id_XMTczMjE2MTMzMg==.mp4"></video>
+    <video class="video" src="http://www.bilibili.com/video/av8719680/"></video>
   </view>
 </view>
